Replace explicit cmake download with Kitware package

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,20 +1,22 @@
 # Use the C++ base image
 FROM mcr.microsoft.com/devcontainers/cpp
 
-# Install gh
 # Update and install dependencies
 RUN apt-get update && apt-get install --no-install-recommends -y \
     gh \
     asciinema \
+    ninja-build \
     && rm -rf /var/lib/apt/lists/*
 
 # Install cmake
-ARG TARGETPLATFORM
-RUN echo "${TARGETPLATFORM}"
-RUN case "${TARGETPLATFORM}" in \
-         "linux/amd64")  ARCHITECTURE="x86_64"   ;; \
-         "linux/arm64")  ARCHITECTURE="aarch64"  ;; \
-         "linux/arm64/v8")  ARCHITECTURE="aarch64"  ;; \
-         *)  exit 1 ;; \
-    esac; \
-    curl --insecure -L "https://github.com/Kitware/CMake/releases/download/v3.27.7/cmake-3.27.7-linux-${ARCHITECTURE}.tar.gz" | tar xz --strip-components=1 -C /usr/local
+RUN apt-get update && \
+    apt-get install gpg wget --no-install-recommends -y && \
+    wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null && \
+    echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ jammy main' | sudo tee /etc/apt/sources.list.d/kitware.list >/dev/null && \
+    apt-get update && \
+    rm /usr/share/keyrings/kitware-archive-keyring.gpg && \
+    apt-get install kitware-archive-keyring && \
+    apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install cmake --no-install-recommends -y && \
+    rm -rf /var/lib/apt/lists/*
