--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -30,9 +30,9 @@ RUN apt-get update && \
 
 # Set the locale
 RUN locale-gen en_US.UTF-8
-ENV LANG en_US.UTF-8
-ENV LANGUAGE en_US:en
-ENV LC_ALL en_US.UTF-8
+ENV LANG=en_US.UTF-8
+ENV LANGUAGE=en_US:en
+ENV LC_ALL=en_US.UTF-8
 
 # Set the timezone to New York time
 RUN apt-get update && \
